# PDFMasterTool2

./: .dockerignore  .render-build.sh  .replit  DEPLOYMENT.md  Dockerfile  MOBILE_DEPLOYMENT.md  PROJECT_OPTIMIZATION_REPORT.md  Procfile  REACT_MIGRATION_GUIDE.md  TERMINAL_FIXES.md  YELLOW_WARNING_FIXES_SUMMARY.md  add_test_user.py  add_user_direct.py  api_app.py  app.py  background_trainer.py  check_all_tables.py  check_db_schema.py  check_duplicate_users.py  check_instance_db.py  check_session_conflicts.py  cookies.txt  create_new_user.py  create_user.py  custom_ai_model.py  dental_ai_model.py  docker-compose.yml  fix_password.py  image_classifier.py  migrate_db.py  models.py  package-lock.json  pyproject.toml  quick_setup.py  quick_user_search.py  railway.json  render-build.sh  render.yaml  requirements.txt  search_users.py  (+7 more)
config/: __init__.py  models.py
docs/: index.html
frontend/: capacitor.config.ts  nginx.conf  package-lock.json  package.json
instance/: app.db  cases.db  dental_app.db
modelmhanna/: main.py  train.py
models/: dental_classifier.pkl
static/: dashboard.css  navigation.css  navigation_clean.css  script.js  style.css
temp_files/: cookies.txt  cookies1.txt  cookies2.txt  test_cookies.txt
templates/: ai_test.html  ai_training.html  case_detail.html  cases.html  forgot_password.html  index.html  index_backup.html  index_broken.html  landing.html  log.html  login.html  navigation.html  navigation_clean.html  new_case.html  new_form.html  patient_list.html  pdf_template.html  register.html  reset_password.html  settings.html  success.html
(+45 files in other folders)
